# rss2discord

./: Cargo.toml  Containerfile  LICENSE  README.md  config.example.toml  config.example.yaml  dev-compose.yml  docker-compose.yml
.github/workflows/: docker.yml
migrations/: 20240210132730_add_feed_items.sql
src/: config.rs  database.rs  feed.rs  main.rs  receivers.rs  scheduler.rs  webhook.rs
src/receivers/: discord.rs
