[package]
name = "rss2discord"
version = "0.1.0"
edition = "2021"
authors = ["Lucas van Beek"]
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.33"
clap = { version = "4.4.18", features = ["derive"] }
confy = "0.6.0"
env_logger = "0.11.1"
log = "0.4.20"
reqwest = { version = "0.11.23", features = ["json"] }
rss = "2.0.7"
serde = "1.0.196"
serde_derive = "1.0.196"
serde_json = "1.0.112"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono"] }
subst = "0.3.0"
tokio = { version = "1.35.1", features = ["full"] }
tokio-cron-scheduler = "0.10.0"
