[package]
name = "rss2discord"
version = "0.1.0"
edition = "2021"
authors = ["Lucas van Beek"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.33"
chrono-tz = { version = "0.9.0" }
clap = { version = "4.4.18", features = ["derive", "env"] }
confy = { version = "0.6.0", features = ["yaml_conf"], default-features = false }
env_logger = "0.11.1"
fancy-regex = "0.13.0"
log = "0.4.20"
reqwest = { version = "0.12.3", features = ["json", "rustls-tls-native-roots"] }
rss = "2.0.7"
serde = "1.0.196"
serde_derive = "1.0.196"
serde_json = "1.0.112"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono"] }
subst = "0.3.0"
tokio = { version = "1.35.1", features = ["full"] }
tokio-cron-scheduler = { version = "0.10.0", features = ["signal"] }
